// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fIEhEb"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 TEVFi"
              disabled=""
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 eFyiyk"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 hRZQsV"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bPwDLh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB CheckBoxInput__StyledFormField-sc-16fe619-0 kcKOua"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 nMYKY FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dga-dbC"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iZuiQS StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 xGwgC"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dsmHqw StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjiaWH"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
